# qtutil_config_provider

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
example/: CMakeLists.txt  ReadMe.md  audio_settings.cpp  audio_settings.h  contact.cpp  contact.h  main.cpp  mainwindow.cpp  mainwindow.h
example/data/: audio.default.json  audio.schema.json  audio.user.json  contact.application.json  contact.schema.json  contact.system.json  contact.user.json
include/mmolch/: qtutil_config_provider.h
src/: qtutil_config_provider.cpp
tests/: CMakeLists.txt
